Add goal graphs to all financial goals

--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -1086,19 +1086,19 @@
                                     <div class="row">
                                         <div class="col-xs-6">
                                             <div class="row">
-                                                <h4>Investment till October 2030</h4>
-                                                <p><span class="highlight">20.4 lakh</span></p>
+                                                <h4>Investment till <span class="content" ng-bind="graphObject.toDate"></span></h4>
+                                                <p><span class="highlight"><span class="currency">&#8377</span><span class="content" ng-bind="graphObject.totalInvestment | amountSeffix"></span></span></p>
                                             </div>
                                         </div>
                                         <div class="col-xs-6">
                                             <div class="row">
-                                                <h4>Investment till October 2030</h4>
-                                                <p><span class="highlight">1.80 crore</span></p>
+                                                <h4>Projected in <span class="content" ng-bind="graphObject.toDate"></span></h4>
+                                                <p><span class="highlight"><span class="currency">&#8377</span><span class="content" ng-bind="graphObject.totalProjectedCorpus | amountSeffix"></span></span></p>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <goal-chart title="graphObject.title" series="graphObject.series" categories="graphObject.catergory" interval="graphObject.interval"></goal-chart>
+                                <goal-chart chartoptions="graphObject" ></goal-chart>
                             </div>
                         </div>
                     </div>
@@ -1343,19 +1343,19 @@
                                     <div class="row">
                                         <div class="col-xs-6">
                                             <div class="row">
-                                                <h4>Investment till October 2030</h4>
-                                                <p><span class="highlight">20.4 lakh</span></p>
+                                                <h4>Investment till <span class="content" ng-bind="graphObject.toDate"></span></h4>
+                                                <p><span class="highlight"><span class="currency">&#8377</span><span class="content" ng-bind="graphObject.totalInvestment | amountSeffix"></span></span></p>
                                             </div>
                                         </div>
                                         <div class="col-xs-6">
                                             <div class="row">
-                                                <h4>Investment till October 2030</h4>
-                                                <p><span class="highlight">1.80 crore</span></p>
+                                                <h4>Projected in <span class="content" ng-bind="graphObject.toDate"></span></h4>
+                                                <p><span class="highlight"><span class="currency">&#8377</span><span class="content" ng-bind="graphObject.totalProjectedCorpus | amountSeffix"></span></span></p>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <goal-chart title="graphObject.title" series="graphObject.series" categories="graphObject.catergory" interval="graphObject.interval"></goal-chart>
+                                <goal-chart chartoptions="graphObject" ></goal-chart>
                             </div>
                         </div>
                     </div>
@@ -1561,19 +1561,19 @@
                                     <div class="row">
                                         <div class="col-xs-6">
                                             <div class="row">
-                                                <h4>Investment till October 2030</h4>
-                                                <p><span class="highlight">20.4 lakh</span></p>
+                                                <h4>Investment till <span class="content" ng-bind="graphObject.toDate"></span></h4>
+                                                <p><span class="highlight"><span class="currency">&#8377</span><span class="content" ng-bind="graphObject.totalInvestment | amountSeffix"></span></span></p>
                                             </div>
                                         </div>
                                         <div class="col-xs-6">
                                             <div class="row">
-                                                <h4>Investment till October 2030</h4>
-                                                <p><span class="highlight">1.80 crore</span></p>
+                                                <h4>Projected in <span class="content" ng-bind="graphObject.toDate"></span></h4>
+                                                <p><span class="highlight"><span class="currency">&#8377</span><span class="content" ng-bind="graphObject.totalProjectedCorpus | amountSeffix"></span></span></p>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <goal-chart title="graphObject.title" series="graphObject.series" categories="graphObject.catergory" interval="graphObject.interval"></goal-chart>
+                                <goal-chart chartoptions="graphObject" ></goal-chart>
                             </div>
                         </div>
                     </div>
@@ -1780,19 +1780,19 @@
                                     <div class="row">
                                         <div class="col-xs-6">
                                             <div class="row">
-                                                <h4>Investment till October 2030</h4>
-                                                <p><span class="highlight">20.4 lakh</span></p>
+                                                <h4>Investment till <span class="content" ng-bind="graphObject.toDate"></span></h4>
+                                                <p><span class="highlight"><span class="currency">&#8377</span><span class="content" ng-bind="graphObject.totalInvestment | amountSeffix"></span></span></p>
                                             </div>
                                         </div>
                                         <div class="col-xs-6">
                                             <div class="row">
-                                                <h4>Investment till October 2030</h4>
-                                                <p><span class="highlight">1.80 crore</span></p>
+                                                <h4>Projected in <span class="content" ng-bind="graphObject.toDate"></span></h4>
+                                                <p><span class="highlight"><span class="currency">&#8377</span><span class="content" ng-bind="graphObject.totalProjectedCorpus | amountSeffix"></span></span></p>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <goal-chart title="graphObject.title" series="graphObject.series" categories="graphObject.catergory" interval="graphObject.interval"></goal-chart>
+                                <goal-chart chartoptions="graphObject" ></goal-chart>
                             </div>
                         </div>
                     </div>
@@ -1998,19 +1998,19 @@
                                     <div class="row">
                                         <div class="col-xs-6">
                                             <div class="row">
-                                                <h4>Investment till October 2030</h4>
-                                                <p><span class="highlight">20.4 lakh</span></p>
+                                                <h4>Investment till <span class="content" ng-bind="graphObject.toDate"></span></h4>
+                                                <p><span class="highlight"><span class="currency">&#8377</span><span class="content" ng-bind="graphObject.totalInvestment | amountSeffix"></span></span></p>
                                             </div>
                                         </div>
                                         <div class="col-xs-6">
                                             <div class="row">
-                                                <h4>Investment till October 2030</h4>
-                                                <p><span class="highlight">1.80 crore</span></p>
+                                                <h4>Projected in <span class="content" ng-bind="graphObject.toDate"></span></h4>
+                                                <p><span class="highlight"><span class="currency">&#8377</span><span class="content" ng-bind="graphObject.totalProjectedCorpus | amountSeffix"></span></span></p>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <goal-chart title="graphObject.title" series="graphObject.series" categories="graphObject.catergory" interval="graphObject.interval"></goal-chart>
+                                <goal-chart chartoptions="graphObject" ></goal-chart>
                             </div>
                         </div>
                     </div>
@@ -2155,19 +2155,19 @@
                                     <div class="row">
                                         <div class="col-xs-6">
                                             <div class="row">
-                                                <h4>Investment till October 2030</h4>
-                                                <p><span class="highlight">20.4 lakh</span></p>
+                                                <h4>Investment till <span class="content" ng-bind="graphObject.toDate"></span></h4>
+                                                <p><span class="highlight"><span class="currency">&#8377</span><span class="content" ng-bind="graphObject.totalInvestment | amountSeffix"></span></span></p>
                                             </div>
                                         </div>
                                         <div class="col-xs-6">
                                             <div class="row">
-                                                <h4>Investment till October 2030</h4>
-                                                <p><span class="highlight">1.80 crore</span></p>
+                                                <h4>Projected in <span class="content" ng-bind="graphObject.toDate"></span></h4>
+                                                <p><span class="highlight"><span class="currency">&#8377</span><span class="content" ng-bind="graphObject.totalProjectedCorpus | amountSeffix"></span></span></p>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <goal-chart title="graphObject.title" series="graphObject.series" categories="graphObject.catergory" interval="graphObject.interval"></goal-chart>
+                                <goal-chart chartoptions="graphObject" ></goal-chart>
                             </div>
                         </div>
                     </div>
