Added risk image directive, changed events to event

--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -1072,7 +1072,7 @@
                                         </div>
                                     </div>
                                     <div class="guageCalculator">
-                                        <risk-mage></risk-mage>
+                                        <risk-image></risk-image>
                                         <!-- <img src="assets/images/guageCalculator.png"> -->
                                     </div>  
                                     <p class="bottom-text">As per your risk profile</p>
