--- a/app/modules/goals/views/goal.html
+++ b/app/modules/goals/views/goal.html
@@ -77,7 +77,7 @@
 				</div>
 				<h2>Wedding</h2>
 			</div>
-			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" ng-click=startGoalAdd('events')>
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" ng-click=startGoalAdd('event')>
 				<div class="goals-cover">
 					<div class="image-div">
 						<img src="assets/images/others.png">
