Added risk image and text, sending busyIndicator for some goals from contoller

--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -850,13 +850,9 @@
                                         </div>
                                     </div>
                                     <div class="guageCalculator">
-                                        <img src="assets/images/categoryImage1.png" ng-if="riskTaker == 'low'">
-                                        <img src="assets/images/categoryImage3.png" ng-if="riskTaker == 'below_average'">
-                                        <img src="assets/images/assesmentCar.png" ng-if="riskTaker == 'average'">
-                                        <img src="assets/images/categoryImage2.png" ng-if="riskTaker == 'above_average'">
-                                        <img src="assets/images/categoryImage4.png" ng-if="riskTaker == 'high'">
-                                        <img src="assets/images/assesmentCar.png">
+                                        <risk-image></risk-image>
                                     </div>  
+                                    <risk-type></risk-type>
                                     <p class="bottom-text">As per your risk profile</p>
                                 </div>
                             </div>
@@ -1073,8 +1069,8 @@
                                     </div>
                                     <div class="guageCalculator">
                                         <risk-image></risk-image>
-                                        <!-- <img src="assets/images/guageCalculator.png"> -->
                                     </div>  
+                                    <risk-type></risk-type>
                                     <p class="bottom-text">As per your risk profile</p>
                                 </div>
                             </div>
@@ -1329,9 +1325,10 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="guageCalculator">
-                                        <img src="assets/images/guageCalculator.png">
+                                   <div class="guageCalculator">
+                                        <risk-image></risk-image>
                                     </div>  
+                                    <risk-type></risk-type>
                                     <p class="bottom-text">As per your risk profile</p>
                                 </div>
                             </div>
@@ -1548,8 +1545,9 @@
                                         </div>
                                     </div>
                                     <div class="guageCalculator">
-                                        <img src="assets/images/guageCalculator.png">
+                                        <risk-image></risk-image>
                                     </div>  
+                                    <risk-type></risk-type>
                                     <p class="bottom-text">As per your risk profile</p>
                                 </div>
                             </div>
@@ -1767,8 +1765,9 @@
                                         </div>
                                     </div>
                                     <div class="guageCalculator">
-                                        <img src="assets/images/guageCalculator.png">
+                                        <risk-image></risk-image>
                                     </div>  
+                                    <risk-type></risk-type>
                                     <p class="bottom-text">As per your risk profile</p>
                                 </div>
                             </div>
@@ -1985,8 +1984,9 @@
                                         </div>
                                     </div>
                                     <div class="guageCalculator">
-                                        <img src="assets/images/guageCalculator.png">
+                                        <risk-image></risk-image>
                                     </div>  
+                                    <risk-type></risk-type>
                                     <p class="bottom-text">As per your risk profile</p>
                                 </div>
                             </div>
@@ -2142,8 +2142,9 @@
                                         </div>
                                     </div>
                                     <div class="guageCalculator">
-                                        <img src="assets/images/guageCalculator.png">
+                                        <risk-image></risk-image>
                                     </div>  
+                                    <risk-type></risk-type> 
                                     <p class="bottom-text">As per your risk profile</p>
                                 </div>
                             </div>
@@ -2296,8 +2297,9 @@
                                         </div>
                                     </div>
                                     <div class="guageCalculator">
-                                        <img src="assets/images/guageCalculator.png">
+                                        <risk-image></risk-image>
                                     </div>  
+                                    <risk-type></risk-type>
                                     <p class="bottom-text">As per your risk profile</p>
                                 </div>
                             </div>
