--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -2201,66 +2201,25 @@
                             <p><span class="placeholder addPadding-4Per addPaddingLeft-20Per">Note:This amount will be invested in Equity Linked<span class="nextline">Savings Schemes (ELSS) of reputed asset</span><span class="nextline">management companies,to maximize your</span>tax savings.</span></p>
                         </div>
                         <div class="gauge-result">
+                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="[{'tip':'Amount invested in ELSS schemes will have a lock-in period of 3 years'}]" info-width="100%" class-name="guagePig"></info-tip></span>Projected Investment Growth</p></div>
                             <div class="meter-widget-cover">
-                                <div class="col-xs-12 meter-header">
-                                    <button class="edit" ng-click="callModel()"></button>
+                                <div class="col-xs-12 graph-header">
                                     <div class="row">
-                                        <div class="col-xs-6 text-right">
-                                            <h2 class="debt">Debt</h2>
-                                            <p class="debt">0%</p>
-                                            <h4 ><span class="currency">&#8377</span>0</h4>
+                                        <div class="col-xs-6">
+                                            <div class="row">
+                                                <h4>Investment till <span class="content" ng-bind="graphObject.toDate"></span></h4>
+                                                <p><span class="highlight"><span class="currency">&#8377</span><span class="content" ng-bind="graphObject.totalInvestment | amountSeffix"></span></span></p>
+                                            </div>
                                         </div>
-                                        <div class="col-xs-6 text-left">
-                                            <h2 class="equity">Equity</h2>
-                                            <p class="equity">100%</p>
-                                            <h4><span class="currency">&#8377</span>5000</h4>
+                                        <div class="col-xs-6">
+                                            <div class="row">
+                                                <h4>Projected in <span class="content" ng-bind="graphObject.toDate"></span></h4>
+                                                <p><span class="highlight"><span class="currency">&#8377</span><span class="content" ng-bind="graphObject.totalProjectedCorpus | amountSeffix"></span></span></p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="guage clearfix" one-time-equity="20" calculate-guage="80">
-                                    <h4 class="text">Recommended</h4>
-                                    <div class="orbit">
-                                        <div class="indicator"></div>
-                                    </div>  
-                                    <div class="guage-image">
-                                        <img src="assets/images/guage.png">
-                                        <div class="meater-cover"></div>
-                                        <div class="pointer">
-                                            <img src="assets/images/pointer.png">
-                                        </div>
-                                    </div>
-                                    <div class="box-indicator col-xs-12">
-                                        <div class="row">
-                                            <div class="col-xs-4 text-left">
-                                                <div class="row">
-                                                    <div class="checkbox-cover">
-                                                        <input type="radio" name="type">
-                                                        <label><span></span></label>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-xs-4 text-center">
-                                                <div class="checkbox-cover">
-                                                    <input ng-checked="true" type="radio" name="type">
-                                                    <label><span></span></label>
-                                                </div>
-                                            </div>
-                                            <div class="col-xs-4 text-right">
-                                                <div class="row">
-                                                    <div class="checkbox-cover">
-                                                        <input type="radio" name="type">
-                                                        <label><span></span></label>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="guageCalculator">
-                                        <risk-image></risk-image>
-                                    </div>  
-                                    <risk-type></risk-type>
-                                    <p class="bottom-text">As per your risk profile</p>
-                                </div>
+                                <goal-chart chartoptions="graphObject" ></goal-chart>
                             </div>
                         </div>
                     </div>
@@ -2280,8 +2239,8 @@
     <div class="fin-btn-group gotoPages" ng-show="$root.lastSlide">
         <button class="fin-link-btn content-prev" ng-click="(step != 1) && (step = step - 1)"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
         <button ng-show="(step == 1) && ($root.selectedCriteria == 'op1' || $root.selectedCriteria == 'op2')" ng-click="appendValues(modelVal);(step = step + 1)" ng-disabled="retirementForm1.$invalid" class="fin-app-btn fin-orange content-next">CONTINUE</button>
-        <button ng-show="(step == 2) && ($root.selectedCriteria == 'op1')" ng-click="appendValues(modelVal);(step = step + 1);" ng-disabled="(modelVal.A2 == 0)||(modelVal.A2 == undefined)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
-        <button ng-show="(step == 2) && ($root.selectedCriteria == 'op2')" ng-click="appendValues(modelVal);(step = step + 1)" ng-disabled="(modelVal.A2 == 0)||(modelVal.A2 == undefined)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
+        <button ng-show="(step == 2) && ($root.selectedCriteria == 'op1')" ng-click="appendValues(modelVal);(step = step + 1);getGoalGraphDetails()" ng-disabled="(modelVal.A2 == 0)||(modelVal.A2 == undefined)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
+        <button ng-show="(step == 2) && ($root.selectedCriteria == 'op2')" ng-click="appendValues(modelVal);(step = step + 1);getGoalGraphDetails()" ng-disabled="(modelVal.A2 == 0)||(modelVal.A2 == undefined)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
     </div>
 </div>
 <div ng-if="swiperName == 'investorInfo'" class="fadeIn swiper-container customSwiper investorInfo type2Sliders" ng-init="step = 1">
