--- a/app/modules/planinvestment/views/planinvest.html
+++ b/app/modules/planinvestment/views/planinvest.html
@@ -3,17 +3,17 @@
 	<div class="col-xs-12">
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 invest-outer-cover">
-				<div class="investCover has-covered">
+				<div class="investCover" ng-class="{'has-covered': $root.goalAnswered['invest'] == true}">
 					<div class="cloud1"><img src="assets/images/login_cloud1.png"></div>
 					<div class="cloud2"><img src="assets/images/login_cloud2.png"></div>
-					<div class="checkbox-cover">
+					<div class="checkbox-cover" ng-if="$root.goalAnswered['invest']">
 						<input type="radio" name>
 						<label><span></span></label>
 					</div>
 					<div class="image-div">
 						<img src="assets/images/planInvestMent.png">
 					</div>	
-					<button click-redirect="/quickInvestStart" class="fin-app-btn fin-blue full-width">Quick Invest</button>				
+					<button ng-click="startGoalAdd('invest')" class="fin-app-btn fin-blue full-width">Quick Invest</button>				
 				</div>
 				<div class="col-xs-12 desc">
 					<p class="text-center">Simply Build Wealth through monthly<span class="nextline">SIP or one-time lumpsum investment or both.</span></p>
