--- a/less/swiper.less
+++ b/less/swiper.less
@@ -206,6 +206,13 @@
             display:inline-block;
             position:relative;
             left:6px;
+            span{
+              &.percentage{
+                    position:absolute;
+                    bottom:3px;
+                    color:@marinerapprox;
+                  }
+            }
             &.age{
               width:4%!important;
               margin-left: 5px;
