--- a/less/widgets.less
+++ b/less/widgets.less
@@ -159,11 +159,21 @@
 		}
 	}
 	.guageCalculator{
-		width: 30%;
+		width: 40%;
 		margin: 0 auto;
 		margin-top: -8%;
+		background-color:#fff;
+		border-radius:10px;
 		img{
+    		background-color: rgb(240,244,247);
 			width: 100%;
+		}
+		p{
+		    font-size: 15px !important;
+    		margin-bottom: 9px !important;
+    		margin-top: 5px;
+    		padding-bottom:10px;
+    		color: rgb( 36, 122, 188 ) !important;
 		}
 	}
 	.bottom-text{
