--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -2021,7 +2021,6 @@
                             <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
                                 <div class="row">
                                     <fin-calendar-form year="true" year-max="50" ng-model="modelVal.A2" format-symbol="none" type="#fde8de" font-color="#f26529" min="0" max="100"></fin-calendar-form>
-                                
                                 </div>
                             </div>
                         </div>
@@ -2253,7 +2252,7 @@
         <div class="swiper-slide">
             <form name="invertorInfoForm1" novalidate>
                 <div class="swiper-content noPadding">
-                      <p class="question">I am <select dropdown ng-model="modelVal.taxStatus"><option selected value="op1">Resident Invidual</option><option value="op2">International</option></select></p>
+                      <p class="question">I am <select dropdown ng-model="modelVal.investorStatus"><option selected value="Resident Individual">Resident Individual</option></select></p>
                       <p class="question">and my PAN card number is <span class="swiper-input"><input validate-pan ng-model="modelVal.panNumber" type="text" name="pan" required><b ng-show="$root.verify == true">KYC VERIFIED</b><b ng-show="$root.verify == false">KYC NOT VERIFIED</b></span></p>
                       <span class="error-text" ng-show="invertorInfoForm1.pan.$error.invalidPan">Please enter valid PAN number</span>
                       <p class="question">My name is <span class="swiper-input"><input ng-model="modelVal.applicantName" type="text" name="year" required></span></p>
@@ -2267,21 +2266,8 @@
                 <div class="swiper-content noPadding">
                      <p class="question">I was born in the city of <span class="swiper-input"><input ng-model="modelVal.placeOfBirth" type="text" name="year" required></span></p>
                      <p class="question">In the country: <select ng-if="countryList" dropdown scroll-height="250" ng-model="modelVal.countryOfBirth"><option ng-selected="$index == 0" ng-repeat="country in countryList" value="{{country.value}}">{{country.value}}</option></select></p>
-                      <p class="question">I worked as a <select dropdown ng-model="modelVal.occupationType"><option selected value="op1">Consultant</option><option value="op2">International</option></select></p>
-                      <p class="question">And I make <select dropdown ng-model="modelVal.A1" scroll-height="120"><option selected value="op1">&lt; 1 Lakhs</option><option value="op2">1-5 Lakhs</option><option value="op2">5-10 Lakhs</option><option value="op2">10-25 Lakhs</option><option value="op2">25-100 Lakhs</option><option value="op2">&gt; 100 Lakhs</option></select>per year</p>
-                </div>
-            </form>
-        </div>
-        <div class="swiper-slide">
-            <form name="quickInvestForm3" novalidate>
-                <div class="swiper-content noPadding">
-                      <p class="question">I am providing my <select dropdown ng-model="modelVal.A1"><option selected value="op1">Residential</option><option value="op2">International</option></select> address</p>
-                      <p class="question">My PIN code is <span class="swiper-input"><input ng-model="modelVal.A4" type="text" name="year" required></span></p>
-                      <p class="question">and my address is <span class="swiper-input"><input ng-model="modelVal.A4" type="text" name="year" required></span></p>
-                      <p class="question">it is located in the city of <span class="swiper-input"><input ng-model="modelVal.A4" type="text" name="year" required></span></p>
-                      <p class="question">it is located in the city of <span class="swiper-input"><input ng-model="modelVal.A4" type="text" name="year" required></span></p>
-                      <p class="question">in the state of <span class="swiper-input"><input ng-model="modelVal.A4" type="text" name="year" required></span></p>
-                      <p class="question">in the country <span class="swiper-input"><input ng-model="modelVal.A4" type="text" name="year" required></span></p>
+                      <p class="question">I worked as a <select dropdown ng-model="modelVal.occupationType"><option selected value="PRI">Private Sector Service</option><option selected value="PRO">Professional (Self-Employed)</option><option selected value="BUS">Business</option><option selected value="HOU">Housewife</option><option selected value="PUB">Public Sector Service</option><option selected value="GOV">Government Service</option><option selected value="FOR">Forex Dealer</option><option selected value="AGR">Agriculturist</option><option selected value="STU">Student</option><option selected value="OTH">Other (please specify)</option></select></p>
+                      <p class="question">And I make <select dropdown ng-model="modelVal.income" scroll-height="120"><option selected value="1">&lt; 1 Lakhs</option><option value="2">1-5 Lakhs</option><option value="3">5-10 Lakhs</option><option value="4">10-25 Lakhs</option><option value="5">25-100 Lakhs</option><option value="6">&gt; 100 Lakhs</option></select>per year</p>
                 </div>
             </form>
         </div>
@@ -2301,17 +2287,6 @@
                 </div>
             </form>
         </div>
-        <div class="swiper-slide">
-            <form name="quickInvestForm3" novalidate>
-                <div class="swiper-content noPadding hasCheckbox">
-                    <p class="question">My mobile number is <span class="swiper-input"><input ng-model="modelVal.A4" type="text" name="year" required></span></p>
-                    <p class="question">and my email address is <span class="swiper-input"><input ng-model="modelVal.A4" type="text" name="year" required></span></p>
-                    <div class="checkbox-cover">
-                        <input type="checkbox" required id="option1Type1" name="option1" ng-model="modelVal.A8" value="op1"><label for="option1Type1"><span></span>My permanent address is same as the address given before.</label>
-                    </div>
-                </div>
-            </form>
-        </div>
     </div>
     <div class="typeSwiper">
         <div class="image-backdrop"><img src="assets/images/investerRegistration.png"></div>
@@ -2319,22 +2294,14 @@
     </div>    
     <div class="fin-btn-group gotoPages">
         <button class="fin-link-btn content-prev" ng-click="(step != 1) && (step = step - 1)"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
-        <button ng-show="(step == 1)" class="fin-app-btn fin-skip-btn content-next">SKIP</button>
-        <button ng-show="(step == 1)" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
-        <button ng-show="(step == 2)" class="fin-app-btn fin-skip-btn content-next">SKIP</button>
-        <button ng-show="(step == 2)" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
+        <button ng-show="(step == 1)" ng-click="(step=step + 2)" class="fin-app-btn fin-skip-btn content-next">SKIP</button>
+        <button ng-show="(step == 1)" ng-click="appendValues(modelVal);(step = step + 1)" ng-disabled="(modelVal.investorStatus==undefined)||(modelVal.panNumber=='')||(modelVal.panNumber==undefined)||(modelVal.applicantName=='')||()modelVal.applicantName==undefined)||(modelVal.fatherName=='')||(modelVal.fatherName==undefined)||(modelVal.dob==undefined)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
+        <button ng-show="(step == 2)" ng-click="(step=step + 1)" class="fin-app-btn fin-skip-btn content-next">SKIP</button>
+        <button ng-show="(step == 2)" ng-click="appendValues(modelVal);saveInfo();(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
         <button ng-show="(step == 3)" class="fin-app-btn fin-skip-btn content-next">SKIP</button>
-        <button ng-show="(step == 3)" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
-        <button ng-show="(step == 4)" class="fin-app-btn fin-skip-btn content-next">SKIP</button>
-        <button ng-show="(step == 4)" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
-        <button ng-show="(step == 5)" class="fin-app-btn fin-skip-btn content-next">SKIP</button>
-        <button ng-show="(step == 5)" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
-        <button ng-show="(step == 6)" class="fin-app-btn fin-skip-btn content-next">SKIP</button>
-        <button ng-show="(step == 6)" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
-        <button ng-show="(step == 7)" class="fin-app-btn fin-skip-btn content-next">SKIP</button>
-        <button ng-show="(step == 7)" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
+        <button ng-show="(step == 3)" ng-click="appendValues(modelVal);(step = step + 1)" click-redirect="/registerInvestorInfo" ng-disabled="(imageUrlOrBase64==undefined)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
     </div>sdsd{{step}}
-    <span ng-if="(step == 4)" class="placeholder imagePlaceholder">Note: Above image will be used to register your investment account.</span>
+    <span ng-if="(step == 3)" class="placeholder imagePlaceholder">Note: Above image will be used to register your investment account.</span>
 </div>
 <div ng-if="swiperName == 'bankInfo'" class="fadeIn swiper-container customSwiper bankInfo type2Sliders" ng-init="step = 1">
     <div class="swiper-wrapper">
@@ -2380,6 +2347,63 @@
     </div>
     <span ng-if="(step == 2)" class="placeholder imagePlaceholder">Note: Above image will be used to register your investment account.</span>
 </div>
+<div ng-if="swiperName == 'contactInfo'" class="fadeIn swiper-container customSwiper contactInfo type2Sliders" ng-init="step = 1">
+    <div class="swiper-wrapper">
+        <div class="swiper-slide">
+            <form name="quickInvestForm3" novalidate>
+                <div class="swiper-content noPadding">
+                      <p class="question">I am providing my <select dropdown ng-model="modelVal.A1"><option selected value="op1">Residential</option><option value="op2">International</option></select> address</p>
+                      <p class="question">My PIN code is <span class="swiper-input"><input ng-model="modelVal.A4" type="text" name="year" required></span></p>
+                      <p class="question">and my address is <span class="swiper-input"><input ng-model="modelVal.A4" type="text" name="year" required></span></p>
+                      <p class="question">it is located in the city of <span class="swiper-input"><input ng-model="modelVal.A4" type="text" name="year" required></span></p>
+                      <p class="question">it is located in the city of <span class="swiper-input"><input ng-model="modelVal.A4" type="text" name="year" required></span></p>
+                      <p class="question">in the state of <span class="swiper-input"><input ng-model="modelVal.A4" type="text" name="year" required></span></p>
+                      <p class="question">in the country <span class="swiper-input"><input ng-model="modelVal.A4" type="text" name="year" required></span></p>
+                </div>
+            </form>
+        </div>
+        <div class="swiper-slide">
+            <form name="quickInvestForm3" novalidate>
+                <div class="swiper-content noPadding hasCheckbox">
+                    <p class="question">My mobile number is <span class="swiper-input"><input ng-model="modelVal.A4" type="text" name="year" required></span></p>
+                    <p class="question">and my email address is <span class="swiper-input"><input ng-model="modelVal.A4" type="text" name="year" required></span></p>
+                    <div class="checkbox-cover">
+                        <input type="checkbox" required id="option1Type1" name="option1" ng-model="modelVal.A8" value="op1"><label for="option1Type1"><span></span>My permanent address is same as the address given before.</label>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="swiper-slide">
+            <form name="quickInvestForm3" novalidate>
+                <div class="swiper-content noPadding swiperReduceBottomPadding">
+                    <input id='upload' accept=".jpg, .png, .jpeg" style="display:none" autoplay onchange="angular.element(this).scope().imageUpload(this)" type='file'/>
+                    <div class="upload-image-cover" upload-file="upload">
+                        <div class="image-div">
+                            <img src="assets/images/uploadPic.png">
+                        </div>
+                        <div ng-if="imageUrlOrBase64" class="imageThumbnail">
+                            <img width="100%" ng-src="{{imageUrlOrBase64}}">
+                        </div>
+                        <p class="text-center">Upload Pan</p>
+                    </div> 
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="typeSwiper">
+        <div class="image-backdrop"><img src="assets/images/investerRegistration.png"></div>
+        <p>Contact Info</p>
+    </div>    
+    <div class="fin-btn-group gotoPages">
+        <button class="fin-link-btn content-prev" ng-click="(step != 1) && (step = step - 1)"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
+        <button ng-show="(step == 1)" class="fin-app-btn fin-skip-btn content-next">SKIP</button>
+        <button ng-show="(step == 1)" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
+        <button ng-show="(step == 2)" class="fin-app-btn fin-skip-btn content-next">SKIP</button>
+        <button ng-show="(step == 2)" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
+    </div>
+    <span ng-if="(step == 2)" class="placeholder imagePlaceholder">Note: Above image will be used to register your investment account.</span>
+</div>
+
 <div ng-if="swiperName == 'nomineeInfo'" class="fadeIn swiper-container customSwiper nomineeInfo type2Sliders" ng-init="step = 1">
     <div class="swiper-wrapper">
         <div class="swiper-slide">
