--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -2253,11 +2253,11 @@
             <form name="invertorInfoForm1" novalidate>
                 <div class="swiper-content noPadding">
                       <p class="question">I am <select dropdown ng-model="modelVal.investorStatus"><option selected value="Resident Individual">Resident Individual</option></select></p>
-                      <p class="question">and my PAN card number is <span class="swiper-input"><input validate-pan ng-model="modelVal.panNumber" type="text" name="pan" required><b ng-show="$root.verify == true">KYC VERIFIED</b><b ng-show="$root.verify == false">KYC NOT VERIFIED</b></span></p>
+                      <p class="question">and my PAN card number is <span class="swiper-input"><input validate-pan ng-model="modelVal.panNumber" type="text" name="pan" ng-change="invertorInfoForm1.pan.$error.invalidPan?0:checkKYCStatus()" required><b ng-show="modelVal.kycStatus == true">KYC VERIFIED</b><b ng-show="modelVal.kycStatus == false">KYC NOT VERIFIED</b></span></p>
                       <span class="error-text" ng-show="invertorInfoForm1.pan.$error.invalidPan">Please enter valid PAN number</span>
                       <p class="question">My name is <span class="swiper-input"><input ng-model="modelVal.applicantName" type="text" name="year" required></span></p>
                       <p class="question">and my father's name is <span class="swiper-input"><input ng-model="modelVal.fatherName" type="text" name="year" required></span>
-                      <p class="question">I was born on <span class="swiper-input"><input type="text" class="datepicker" placeholder="DD/MM/YYYY" data-datepicker="{theme: 'flat',dateformat: 'DD/MM/YYYY'}" data-ng-model="modelVal.dob"></span></p>
+                      <p class="question">I was born on <span class="swiper-input"><input type="text" class="datepicker" placeholder="DD/MM/YYYY" data-datepicker="{theme: 'flat',dateformat: 'YYYY-MM-DD'}" data-ng-model="modelVal.dob"></span></p>
                 </div>
             </form>
         </div>
@@ -2266,7 +2266,7 @@
                 <div class="swiper-content noPadding">
                      <p class="question">I was born in the city of <span class="swiper-input"><input ng-model="modelVal.placeOfBirth" type="text" name="year" required></span></p>
                      <p class="question">In the country: <select ng-if="countryList" dropdown scroll-height="250" ng-model="modelVal.countryOfBirth"><option ng-selected="$index == 0" ng-repeat="country in countryList" value="{{country.value}}">{{country.value}}</option></select></p>
-                      <p class="question">I worked as a <select dropdown ng-model="modelVal.occupationType"><option selected value="PRI">Private Sector Service</option><option selected value="PRO">Professional (Self-Employed)</option><option selected value="BUS">Business</option><option selected value="HOU">Housewife</option><option selected value="PUB">Public Sector Service</option><option selected value="GOV">Government Service</option><option selected value="FOR">Forex Dealer</option><option selected value="AGR">Agriculturist</option><option selected value="STU">Student</option><option selected value="OTH">Other (please specify)</option></select></p>
+                      <p class="question">I worked as a <select dropdown ng-model="modelVal.occupationType"><option value="PRI">Private Sector Service</option><option value="PRO">Professional (Self-Employed)</option><option value="BUS">Business</option><option value="HOU">Housewife</option><option value="PUB">Public Sector Service</option><option value="GOV">Government Service</option><option value="FOR">Forex Dealer</option><option value="AGR">Agriculturist</option><option value="STU">Student</option><option value="OTH">Other (please specify)</option></select></p>
                       <p class="question">And I make <select dropdown ng-model="modelVal.income" scroll-height="120"><option selected value="1">&lt; 1 Lakhs</option><option value="2">1-5 Lakhs</option><option value="3">5-10 Lakhs</option><option value="4">10-25 Lakhs</option><option value="5">25-100 Lakhs</option><option value="6">&gt; 100 Lakhs</option></select>per year</p>
                 </div>
             </form>
@@ -2279,8 +2279,8 @@
                         <div class="image-div">
                             <img src="assets/images/uploadPic.png">
                         </div>
-                        <div ng-if="imageUrlOrBase64" class="imageThumbnail">
-                            <img width="100%" ng-src="{{imageUrlOrBase64}}">
+                        <div ng-if="modelVal.imageUrl" class="imageThumbnail">
+                            <img width="100%" ng-src="{{modelVal.imageUrl}}">
                         </div>
                         <p class="text-center">Upload Pan</p>
                     </div> 
@@ -2294,12 +2294,12 @@
     </div>    
     <div class="fin-btn-group gotoPages">
         <button class="fin-link-btn content-prev" ng-click="(step != 1) && (step = step - 1)"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
-        <button ng-show="(step == 1)" ng-click="(step=step + 2)" class="fin-app-btn fin-skip-btn content-next">SKIP</button>
-        <button ng-show="(step == 1)" ng-click="appendValues(modelVal);(step = step + 1)" ng-disabled="(modelVal.investorStatus==undefined)||(modelVal.panNumber=='')||(modelVal.panNumber==undefined)||(modelVal.applicantName=='')||()modelVal.applicantName==undefined)||(modelVal.fatherName=='')||(modelVal.fatherName==undefined)||(modelVal.dob==undefined)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
+        <button ng-show="(step == 1)" ng-click="(step=step + 1)" class="fin-app-btn fin-skip-btn content-next">SKIP</button>
+        <button ng-show="(step == 1)" ng-click="appendValues(modelVal);(step = step + 1)" ng-disabled="(modelVal.investorStatus==undefined)||(modelVal.panNumber=='')||(modelVal.panNumber==undefined)||(modelVal.applicantName=='')||(modelVal.applicantName==undefined)||(modelVal.fatherName=='')||(modelVal.fatherName==undefined)||(modelVal.dob==undefined)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
         <button ng-show="(step == 2)" ng-click="(step=step + 1)" class="fin-app-btn fin-skip-btn content-next">SKIP</button>
         <button ng-show="(step == 2)" ng-click="appendValues(modelVal);saveInfo();(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
-        <button ng-show="(step == 3)" class="fin-app-btn fin-skip-btn content-next">SKIP</button>
-        <button ng-show="(step == 3)" ng-click="appendValues(modelVal);(step = step + 1)" click-redirect="/registerInvestorInfo" ng-disabled="(imageUrlOrBase64==undefined)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
+        <button ng-show="(step == 3)" click-redirect="/registerInvestorInfo" class="fin-app-btn fin-skip-btn content-next">SKIP</button>
+        <button ng-show="(step == 3)" ng-click="appendValues(modelVal);uploadFileToServer();(step = step + 1)" click-redirect="/registerInvestorInfo" ng-disabled="(modelVal.imageUrl==undefined)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
     </div>sdsd{{step}}
     <span ng-if="(step == 3)" class="placeholder imagePlaceholder">Note: Above image will be used to register your investment account.</span>
 </div>
@@ -2308,15 +2308,15 @@
         <div class="swiper-slide">
             <form name="invertorInfoForm1" novalidate>
                 <div class="swiper-content noPadding hasCheckbox">
-                      <p class="question">My bank's IFSC code is <span class="swiper-input"><input ng-model="modelVal.A4" type="text" name="year" required></span></p>
-                      <span class="placeholder nextline">Bank Name <span>HDFC</span></span>
-                      <span class="placeholder nextline">Branch <span>Bellandur</span></span>
-                      <span class="placeholder nextline">City <span>Bangalore</span></span>
-                      <p class="question">My account number is <span class="swiper-input"><input ng-model="modelVal.A4" type="text" name="year" required></span></p>
-                      <p class="question">and it is in the name of <span class="swiper-input"><input ng-model="modelVal.A4" type="text" name="year" required></span></p>
-                      <p class="question">It is a bank of the following type: <select dropdown ng-model="modelVal.A1"><option selected value="op1">Savings</option><option value="op2">Current</option></select></p>
+                      <p class="question">My bank's IFSC code is <span class="swiper-input"><input validate-ifsc ng-model="modelVal.ifscCode" type="text" name="ifsc" ng-change="invertorInfoForm1.ifsc.$error.invalidIFSC?0:lookupIFSCCode()" required></span></p>
+                      <span class="placeholder nextline">Bank Name <span ng-bind="modelVal.bankName"></span></span>
+                      <span class="placeholder nextline">Branch <span ng-bind="modelVal.bankBranch"></span></span>
+                      <span class="placeholder nextline">City <span ng-bind="modelVal.bankCity"></span></span>
+                      <p class="question">My account number is <span class="swiper-input"><input ng-model="modelVal.accountNumber" type="text" name="year" required></span></p>
+                      <p class="question">and it is in the name of <span class="swiper-input"><input ng-model="modelVal.accountHolderName" type="text" name="year" required></span></p>
+                      <p class="question">It is a bank of the following type: <select dropdown ng-model="modelVal.accountType"><option selected value="S">Savings</option><option value="C">Current</option></select></p>
                       <div class="checkbox-cover">
-                        <input type="checkbox" required id="option1Type1" name="option1" ng-model="modelVal.A8" value="op1"><label for="option1Type1"><span></span>I would like to add ACH mandate for SIP investment.</label>
+                        <input type="checkbox" required id="option1Type1" name="option1" ng-model="modelVal.sip_check" value="true"><label for="option1Type1"><span></span>I would like to add ACH mandate for SIP investment.</label>
                       </div>
                 </div>
             </form>
@@ -2324,9 +2324,13 @@
         <div class="swiper-slide">
             <form name="retirementForm1" novalidate>
                 <div class="swiper-content noPadding swiperReduceBottomPadding">
-                    <div class="upload-image-cover">
+                    <input id='upload' accept=".jpg, .png, .jpeg" style="display:none" autoplay onchange="angular.element(this).scope().imageUpload(this)" type='file'/>
+                    <div class="upload-image-cover" upload-file="upload">
                         <div class="image-div">
                             <img src="assets/images/uploadPic.png">
+                        </div>
+                        <div ng-if="modelVal.imageUrl" class="imageThumbnail">
+                            <img width="100%" ng-src="{{modelVal.imageUrl}}">
                         </div>
                         <p class="text-center">Upload Cheque</p>
                     </div> 
@@ -2340,10 +2344,10 @@
     </div>    
     <div class="fin-btn-group gotoPages">
         <button class="fin-link-btn content-prev" ng-click="(step != 1) && (step = step - 1)"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
-        <button ng-show="(step == 1)" class="fin-app-btn fin-skip-btn content-next">SKIP</button>
-        <button ng-show="(step == 1)" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
-        <button ng-show="(step == 2)" class="fin-app-btn fin-skip-btn content-next">SKIP</button>
-        <button ng-show="(step == 2)" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
+        <button ng-show="(step == 1)" ng-click="(step=step + 1)" class="fin-app-btn fin-skip-btn content-next">SKIP</button>
+        <button ng-show="(step == 1)" ng-click="appendValues(modelVal);saveInfo();(step = step + 1)" ng-disabled="(!modelVal.accountHolderName)||(!modelVal.ifscCode)||(!modelVal.accountNumber)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
+        <button ng-show="(step == 2)" click-redirect="/registerInvestorInfo" class="fin-app-btn fin-skip-btn content-next">SKIP</button>
+        <button ng-show="(step == 2)" ng-click="appendValues(modelVal);uploadFileToServer();(step = step + 1)" click-redirect="/registerInvestorInfo" ng-disabled="(modelVal.imageUrl==undefined)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
     </div>
     <span ng-if="(step == 2)" class="placeholder imagePlaceholder">Note: Above image will be used to register your investment account.</span>
 </div>
