--- a/app/modules/registerinvestor/views/bankInfo.html
+++ b/app/modules/registerinvestor/views/bankInfo.html
@@ -1,3 +1,3 @@
 <section class="swiper-outer-cover">
-	<swiper swiper-name="bankInfo" controller-name="registerInvestorController" result="resultObject" callback-fn="appendFormValues(data)" indicator-end="Bank Info"></swiper>
+	<swiper swiper-name="bankInfo" controller-name="bankInfoController" result="resultObject" callback-fn="appendFormValues(data)" indicator-end="Bank Info"></swiper>
 </section>
