--- a/app/modules/registerinvestor/views/investorInfo.html
+++ b/app/modules/registerinvestor/views/investorInfo.html
@@ -1,3 +1,3 @@
 <section class="swiper-outer-cover">
-	<swiper swiper-name="investorInfo" controller-name="registerInvestorController" result="resultObject" callback-fn="appendFormValues(data)" indicator-end="Investor Info"></swiper>
+	<swiper swiper-name="investorInfo" controller-name="investorInfoController" result="resultObject" callback-fn="appendFormValues(data)" indicator-end="Investor Info"></swiper>
 </section>
